[API] Refactor: Move Dto To Core (#13)
