# internal/infrastructure/handler/order_handler.go
@@ -2,22 +2,21 @@ package handler
 
 import (
 	"fmt"
-	"net/http"
 
 	"github.com/gin-gonic/gin"
 
-	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/controller"
-	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/dto"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/presenter"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/domain"
+	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/dto"
+	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/port"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/infrastructure/handler/request"
 )
 
 type OrderHandler struct {
-	controller *controller.OrderController
+	controller port.OrderController
 }
 
-func NewOrderHandler(controller *controller.OrderController) *OrderHandler {
+func NewOrderHandler(controller port.OrderController) *OrderHandler {
 	return &OrderHandler{controller: controller}
 }
 
@@ -37,10 +36,10 @@ func (h *OrderHandler) Register(router *gin.RouterGroup) {
 //	@Tags			orders
 //	@Accept			json
 //	@Produce		json
-//	@Param			page		query		int										false	"Page number"		default(1)
-//	@Param			limit		query		int										false	"Items per page"	default(10)
 //	@Param			name		query		string									false	"Filter by name"
 //	@Param			category_id	query		int										false	"Filter by category ID"
+//	@Param			page		query		int										false	"Page number"		default(1)
+//	@Param			limit		query		int										false	"Items per page"	default(10)
 //	@Success		200			{object}	presenter.OrderJsonPaginatedResponse	"OK"
 //	@Failure		400			{object}	middleware.ErrorJsonResponse			"Bad Request"
 //	@Failure		500			{object}	middleware.ErrorJsonResponse			"Internal Server Error"
@@ -58,8 +57,12 @@ func (h *OrderHandler) List(c *gin.Context) {
 		Page:       query.Page,
 		Limit:      query.Limit,
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
-	err := h.controller.List(c.Request.Context(), input)
+
+	err := h.controller.List(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -88,8 +91,12 @@ func (h *OrderHandler) Create(c *gin.Context) {
 	input := dto.CreateOrderInput{
 		CustomerID: body.CustomerID,
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
-	err := h.controller.Create(c.Request.Context(), input)
+
+	err := h.controller.Create(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -119,8 +126,12 @@ func (h *OrderHandler) Get(c *gin.Context) {
 	input := dto.GetOrderInput{
 		ID: uri.ID,
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
-	err := h.controller.Get(c.Request.Context(), input)
+
+	err := h.controller.Get(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -162,7 +173,7 @@ func (h *OrderHandler) Update(c *gin.Context) {
 		_ = c.Error(domain.NewInvalidInputError(domain.ErrInvalidBody))
 		return
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
+
 	input := dto.UpdateOrderInput{
 		ID:         uri.ID,
 		CustomerID: body.CustomerID,
@@ -170,7 +181,11 @@ func (h *OrderHandler) Update(c *gin.Context) {
 		StaffID:    body.StaffID,
 	}
 
-	err := h.controller.Update(c.Request.Context(), input)
+	err := h.controller.Update(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -213,7 +228,7 @@ func (h *OrderHandler) UpdatePartial(c *gin.Context) {
 		_ = c.Error(domain.NewInvalidInputError(domain.ErrInvalidBody))
 		return
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
+
 	input := dto.UpdateOrderInput{
 		ID:         uri.ID,
 		CustomerID: body.CustomerID,
@@ -221,7 +236,11 @@ func (h *OrderHandler) UpdatePartial(c *gin.Context) {
 		StaffID:    body.StaffID,
 	}
 
-	err := h.controller.Update(c.Request.Context(), input)
+	err := h.controller.Update(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -234,8 +253,8 @@ func (h *OrderHandler) UpdatePartial(c *gin.Context) {
 //	@Description	Deletes a order by ID
 //	@Tags			orders
 //	@Produce		json
-//	@Param			id	path		int	true	"Order ID"
-//	@Success		204	{object}	nil
+//	@Param			id	path		int								true	"Order ID"
+//	@Success		200	{object}	presenter.OrderJsonResponse		"OK"
 //	@Failure		400	{object}	middleware.ErrorJsonResponse	"Bad Request"
 //	@Failure		404	{object}	middleware.ErrorJsonResponse	"Not Found"
 //	@Failure		500	{object}	middleware.ErrorJsonResponse	"Internal Server Error"
@@ -250,11 +269,15 @@ func (h *OrderHandler) Delete(c *gin.Context) {
 	input := dto.DeleteOrderInput{
 		ID: uri.ID,
 	}
-	h.controller.Presenter = presenter.NewOrderJsonPresenter(c)
-	if err := h.controller.Delete(c.Request.Context(), input); err != nil {
+
+	err := h.controller.Delete(
+		c.Request.Context(),
+		presenter.NewOrderJsonPresenter(c),
+		input,
+	)
+
+	if err != nil {
 		_ = c.Error(err)
 		return
 	}
-
-	c.Status(http.StatusNoContent)
 }
