# internal/infrastructure/handler/staff_handler.go
@@ -1,22 +1,20 @@
 package handler
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 
-	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/controller"
-	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/dto"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/adapter/presenter"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/domain"
+	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/dto"
+	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/port"
 	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/infrastructure/handler/request"
 )
 
 type StaffHandler struct {
-	controller *controller.StaffController
+	controller port.StaffController
 }
 
-func NewStaffHandler(controller *controller.StaffController) *StaffHandler {
+func NewStaffHandler(controller port.StaffController) *StaffHandler {
 	return &StaffHandler{controller: controller}
 }
 
@@ -57,8 +55,11 @@ func (h *StaffHandler) List(c *gin.Context) {
 		Limit: query.Limit,
 	}
 
-	h.controller.Presenter = presenter.NewStaffJsonPresenter(c)
-	err := h.controller.List(c.Request.Context(), input)
+	err := h.controller.List(
+		c.Request.Context(),
+		presenter.NewStaffJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -89,8 +90,11 @@ func (h *StaffHandler) Create(c *gin.Context) {
 		Role: body.Role,
 	}
 
-	h.controller.Presenter = presenter.NewStaffJsonPresenter(c)
-	err := h.controller.Create(c.Request.Context(), input)
+	err := h.controller.Create(
+		c.Request.Context(),
+		presenter.NewStaffJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -121,8 +125,11 @@ func (h *StaffHandler) Get(c *gin.Context) {
 		ID: uri.ID,
 	}
 
-	h.controller.Presenter = presenter.NewStaffJsonPresenter(c)
-	err := h.controller.Get(c.Request.Context(), input)
+	err := h.controller.Get(
+		c.Request.Context(),
+		presenter.NewStaffJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -161,8 +168,11 @@ func (h *StaffHandler) Update(c *gin.Context) {
 		Name: body.Name,
 		Role: body.Role,
 	}
-	h.controller.Presenter = presenter.NewStaffJsonPresenter(c)
-	err := h.controller.Update(c.Request.Context(), input)
+	err := h.controller.Update(
+		c.Request.Context(),
+		presenter.NewStaffJsonPresenter(c),
+		input,
+	)
 	if err != nil {
 		_ = c.Error(err)
 		return
@@ -175,8 +185,8 @@ func (h *StaffHandler) Update(c *gin.Context) {
 //	@Description	Deletes a staff by ID
 //	@Tags			staffs
 //	@Produce		json
-//	@Param			id	path		int	true	"Staff ID"
-//	@Success		204	{object}	nil
+//	@Param			id	path		int								true	"Staff ID"
+//	@Success		200	{object}	presenter.StaffJsonResponse		"OK"
 //	@Failure		400	{object}	middleware.ErrorJsonResponse	"Bad Request"
 //	@Failure		404	{object}	middleware.ErrorJsonResponse	"Not Found"
 //	@Failure		500	{object}	middleware.ErrorJsonResponse	"Internal Server Error"
@@ -191,11 +201,14 @@ func (h *StaffHandler) Delete(c *gin.Context) {
 	input := dto.DeleteStaffInput{
 		ID: uri.ID,
 	}
-	h.controller.Presenter = presenter.NewStaffJsonPresenter(c)
-	if err := h.controller.Delete(c.Request.Context(), input); err != nil {
+	err := h.controller.Delete(
+		c.Request.Context(),
+		presenter.NewStaffJsonPresenter(c),
+		input,
+	)
+
+	if err != nil {
 		_ = c.Error(err)
 		return
 	}
-
-	c.Status(http.StatusNoContent)
 }
